--- a/style.css
+++ b/style.css
@@ -7,9 +7,16 @@ footer{
 }
 
 section{
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 5em;
     padding-bottom: 3em;
-    text-align: center;    
+  
+}
+
+#asignaturas{
+    text-align: center;
 }
 
 .asignatura{
@@ -47,6 +54,7 @@ section > h3{
 }
 
 #intermedia{
+    display: inline-block;
     text-decoration: none;
     color: #000000;  
     background-color: rgb(243, 232, 131);
@@ -58,14 +66,15 @@ section > h3{
     background-color: #f3cc83;
 }
 
-section ul li{
-    margin-left: auto;
-    margin-right: auto;
+section ul li{   
     margin-top: 0.5em;
+    padding: 0.5em;
     background-color: rgb(243, 232, 131);
     list-style-type: none;
     border: solid;
-    width: 7em;
+    width: fit-content;
+    min-width: 7em;
+    max-width: 15em;
 }
 section ul li:hover{
     background-color: #f3cc83;
