--- a/style.css
+++ b/style.css
@@ -1,18 +1,34 @@
+:root{
+    --main-bg-color: #C2EABA;
+    --hover-color:#C5F4E0;
+    --text-color-round:#8F8389;
+    --main-text-color:#000000;
+}
+
 footer{
     text-align: center;
     width: 100%;
     position: fixed;
     bottom: 0;
-    background-color:rgb(243, 232, 131);
+    background-color:var(--main-bg-color);
 }
 
 section{
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 5em;
-    padding-bottom: 3em;
+    padding-top: 3.5em;
+    padding-bottom: 1.8em;
   
+}
+
+body a li{
+    color:val(--main-text-color);
+}
+
+body a:link{
+    color: val(--text-color-round);
+    text-decoration: none;
 }
 
 #asignaturas{
@@ -22,17 +38,17 @@ section{
 .asignatura{
     padding: 1em;
     display: inline-block;
-    background-color: rgb(243, 232, 131);
+    background-color: var(--main-bg-color);
 
 }
 
-.asignatura:hover{
-    background-color: #f3cc83;
+.asignatura:hover, #intermedia:hover{
+    background-color: var(--hover-color);
 }
 
 .asignatura a p{
     margin-bottom: 2vh;
-    color: rgb(39, 24, 180);
+    color: var(--text-color-round);
 }
 .asignatura img{
     display: inline-block;
@@ -42,34 +58,39 @@ section{
 
 }
 
-section > h3{
-    padding: 0.2em;
-    width: 14em;
+section hr{
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
     margin-left: auto;
     margin-right: auto;
-    background-color: #d1f383;
-    border:solid;
+    border-style: solid;
+    border-width: 1px;
     border-color: #000000;
+    background-color: #000000;
 
+}
+
+section > h3{
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #intermedia{
     display: inline-block;
     text-decoration: none;
-    color: #000000;  
-    background-color: rgb(243, 232, 131);
+    color: var(--main-text-color);  
+    background-color: var(--main-bg-color);
     padding: 1em;
     border: solid;
 }
 
-#intermedia:hover{
-    background-color: #f3cc83;
-}
+
 
 section ul li{   
     margin-top: 0.5em;
     padding: 0.5em;
-    background-color: rgb(243, 232, 131);
+    background-color: var(--main-bg-color);
     list-style-type: none;
     border: solid;
     width: fit-content;
@@ -77,16 +98,16 @@ section ul li{
     max-width: 15em;
 }
 section ul li:hover{
-    background-color: #f3cc83;
+    background-color: var(--hover-color);
 }
 
 header{
-    color: rgb(39, 24, 180);
+    color: var(--text-color-round);
     font-size: 1.5em;
     width: 100%;
     position: fixed;
     top: 0;
-    background-color:rgb(243, 232, 131);
+    background-color:var(--main-bg-color);
 }
 
 header p{
