--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body a:link{
 }
 
 .asignatura{
+    color: var(--main-text-color);  
     padding: 1em;
     display: inline-block;
     background-color: var(--main-bg-color);
@@ -48,7 +49,7 @@ body a:link{
 
 .asignatura a p{
     margin-bottom: 2vh;
-    color: var(--text-color-round);
+    color: var(--main-text-color);  
 }
 .asignatura img{
     display: inline-block;
@@ -88,6 +89,7 @@ section > h3{
 
 
 section ul li{   
+    color: var(--main-text-color);  
     margin-top: 0.5em;
     padding: 0.5em;
     background-color: var(--main-bg-color);
@@ -98,6 +100,7 @@ section ul li{
     max-width: 15em;
 }
 section ul li:hover{
+    
     background-color: var(--hover-color);
 }
 
